Completed Authentication API Docomentaition
